Excercise - 2 - Load Balancing/policy-api-v2.yaml
# Service and Deployment configuration for Policy service deployment.
---
##################################################################################################
# Policy service V2
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-api-release-2.0.0
  labels:
    app: policy-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-api
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: policy-api
        version: v2
    spec:
      serviceAccountName: policy-api
      containers:
      - name: policy-api
        image: quay.io/acctrainings/policy-api-gold:release-2.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
