Excercise - 2 - Load Balancing/policy-service.yaml
# Service and Deployment configuration for Policy service deployment.

---
##################################################################################################
# Policy service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-service-release-1.0.0-v2
  labels:
    app: policy-service
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-service
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: policy-service
        version: v2
    spec:
      serviceAccountName: policy-service
      containers:
      - name: policy-service
        image: quay.io/necloudnativetraining/policy-service:release-1.0.0-v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
