Excercise - 2 - Load Balancing/customer-service-virtual-weighted-load-balancing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-api-virtual-service
spec:
  gateways:
      - acctrainings-gateway
  hosts:
      - '*.apps.awsopenshift.ne-innovation.com'
  http:
      - match:
          - uri:
              prefix: /policy
      route:
          - destination:
              host: policy-api
              port:
              number: 8080
              subset: v1
          weight: 80
          - destination:
              host: policy-api
              port:
              number: 8080
              subset: v2
          weight: 20
